--- a/src/test/java/resources/EnvironmentDetails.properties
+++ b/src/test/java/resources/EnvironmentDetails.properties
@@ -1,14 +1,8 @@
 #UI Properties
-#browser =chrome/IE/Firefox
-browser=chrome
+#browser =chrome/IE/Firefox/android/ios
+browser=android
 #url=https://candidatex:qa-is-cool@qa-task.backbasecloud.com/#/login
-url=https://www.online-calculator.com/full-screen-calculator/
-#Common properties UI and API
-#User Login details
-userEmail=candidatex@gmail.com
-passWord=C@nd1date
-userName=candidatex1
+url=http://familiar.lsac.org/
+DriverType=Mobile
 #Extent report xml path
 reportConfigPath=/src/test/java/resources/extent-config.xml
-#API Properties
-baseUrl=https://candidatex:qa-is-cool@qa-task.backbasecloud.com
